# voiceclone

./: .gitignore  CHANGELOG.md  CLAUDE.md  package.json  test-features.js
.claude/: settings.local.json
backend/: .env  check_voices.py  main.py  pyproject.toml  requirements.txt
backend/app/api/: __init__.py  clone.py  config.py  timeline.py  tts.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/models/: __init__.py  timeline.py  tts_config.py  voice_profile.py
backend/app/services/: qwen_tts_service.py  storage_service.py
backend/migrations/: add_tts_params_to_segments.sql
backend/scripts/: update_db_schema.py
backend/tests/: __init__.py  conftest.py  example_create_clone.py  example_only_clone.py  run_tests.py
backend/tests/fixtures/: __init__.py  factories.py
backend/tests/integration/: test_clone_api.py  test_tts_api.py
backend/tests/unit/: test_qwen_tts_service.py  test_voice_profile_model.py
docs/knowledge/ui-features/: voice-cloning-ui-enhancements-20260409.md
docs/plans/: 2026-04-09-001-feat-voice-collection-ui-enhancements-plan.md
docs/solutions/: functional_test_steps.md
docs/solutions/frontend-issues/: voice-clone-ui-enhancement.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/TimelineView/: TimelineView.module.css  TimelineView.test.tsx  TimelineView.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts  test-utils.ts
tests/e2e/: test-functional-updated.py  test-functional.py  test-recon.py
tests/results/: test_api_integration.py  test_core_features.py  test_initial_recon.py  test_report.txt
