[project]
name = "voiceclone-backend"
version = "0.1.0"
description = "Voice Clone Studio Backend - FastAPI with Qwen CosyVoice"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.25",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "dashscope>=1.25.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "migrations",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    # Testing
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.2",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "requests-mock>=1.11.0",
    "sqlalchemy-utils>=0.41.1",
    "freezegun>=1.2.2",
    "factory-boy>=3.3.0",
    "Faker>=21.0.0",
    "starlette-testclient>=0.3.0",
    # Linting & Code Quality
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "types-aiofiles>=25.1.0.20260408",
    "types-requests>=2.33.0.20260408",
]

[tool.scripts]
# 执行所有代码检查：ruff + mypy（支持传递路径参数，比如 uv run lint app/api/xxx.py）
lint = "ruff check $@ && mypy $@"
# 自动修复+格式化+类型检查（支持传递路径参数）
lint-fix = "ruff check --fix $@ && ruff format $@ && mypy $@"
# 只运行ruff检查（快速，支持传递路径参数）
lint-ruff = "ruff check $@"
# 只运行mypy类型检查（支持传递路径参数）
lint-mypy = "mypy $@"
